--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.0.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
