--- a/package.json
+++ b/package.json
@@ -6,41 +6,40 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroui/react": "^2.7.2",
+    "@heroui/react": "^2.7.5",
     "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@react-spring/web": "^9.7.5",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^10.0.4",
-    "@react-three/fiber": "^9.0.4",
+    "@react-three/fiber": "^9.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tailwindcss/postcss": "^4.0.13",
     "@types/three": "^0.174.0",
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.7",
-    "lucide-react": "^0.468.0",
+    "framer-motion": "^12.4.11",
+    "lucide-react": "^0.479.0",
     "next": "latest",
-    "next-themes": "^0.4.3",
-    "prettier": "^3.3.3",
+    "next-themes": "^0.4.5",
+    "prettier": "^3.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
     "three": "^0.174.0"
   },
   "devDependencies": {
-    "@types/node": "22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "19.0.2",
-    "postcss": "8.4.49",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "3.4.17",
+    "@types/node": "22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "19.0.4",
+    "postcss": "8.5.3",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.7.2"
+    "typescript": "5.8.2"
   }
 }
