--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "latest",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
