refactor: remove deprecated Spotify callback route and implement new login page with Supabase authentication

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
