--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "three": "^0.174.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
