--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.1",
     "three": "^0.174.0"
   },
   "devDependencies": {
@@ -40,5 +41,8 @@
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
