--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
+    "swr": "^2.3.3",
     "three": "^0.174.0",
     "zod": "^3.24.2"
   },
